--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,4 @@
 copy.src.files=true
-copy.src.target=/home/federico/Dropbox/OO_WishList
-index.file=index.php
+copy.src.target=C:\\home\\federico\\Dropbox\\OO_WishList
 run.as=LOCAL
-url=http://localhost/OO_Wishlist/src
+url=http://localhost/OOWishlist/src
