--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-copy.src.files=true
-copy.src.target=C:\\home\\federico\\Dropbox\\OO_WishList
+copy.src.files=false
+copy.src.target=/home/federico/Dropbox/OO_WishList
 run.as=LOCAL
 url=http://localhost/OOWishlist/src
