Trabajando con BaseDEDatos
-Añadido Connect
-Añadido Select
-Editado el resto de ficheros para pruebas

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 copy.src.files=false
 copy.src.target=/home/federico/Dropbox/OO_WishList
+index.file=Index.php
 run.as=LOCAL
-url=http://localhost/OOWishlist/src
+url=http://localhost/OOWishList/src
